mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_unterminated_string.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Unterminated string
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_unterminated_string.mux:2:1
   |
 2 | "hello
   | ^^^^^
   |
= help: Make sure to close the string with a matching quote
